--- a/index.html
+++ b/index.html
@@ -75,7 +75,88 @@
                             </div>
                         </div>
                     </div>
-                    <div class="schedule"></div>
+                    <div class="schedule">
+                        <div class="weekly-sched">
+                            <h2>Weekly Schedule</h2>
+                            <div class="dates">
+                                <div class="swimming-date date">
+                                    <div class="day">
+                                        <h1>13</h1>
+                                        <p>mon</p>
+                                    </div>
+                                    <div class="activity">
+                                        <h2>Swimming</h2>
+                                        <div class="participants">
+                                        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c61daa1c-5881-43f8-a50f-62be3d235daf" alt="" class="img-prof"/>
+                                        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/90affa88-8da0-40c8-abe7-f77ea355a9de" alt="" class="img-prof"/>
+                                        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/07d4fa6f-6559-4874-b912-3968fdfe4e5e" alt="" class="img-prof"/>
+                                        <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e082b965-bb88-4192-bce6-0eb8b0bf8e68" alt="" class="img-prof"/>
+                                        </div>
+                                    </div>
+                                    <button class="btn">Join</button>
+                                </div>
+                                <div class="yoga-date date"><div class="day">
+                                    <h1>15</h1>
+                                    <p>wed</p>
+                                </div>
+                                <div class="activity">
+                                    <h2>Yoga</h2>
+                                    <div class="participants">
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c61daa1c-5881-43f8-a50f-62be3d235daf" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/90affa88-8da0-40c8-abe7-f77ea355a9de" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/07d4fa6f-6559-4874-b912-3968fdfe4e5e" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e082b965-bb88-4192-bce6-0eb8b0bf8e68" alt="" class="img-prof"/>
+                                    </div>
+                                </div>
+                                <button class="btn">Join</button></div>
+                                <div class="tennis-date date"><div class="day">
+                                    <h1>17</h1>
+                                    <p>fri</p>
+                                </div>
+                                <div class="activity">
+                                    <h2>Tennis</h2>
+                                    <div class="participants">
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c61daa1c-5881-43f8-a50f-62be3d235daf" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/90affa88-8da0-40c8-abe7-f77ea355a9de" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/07d4fa6f-6559-4874-b912-3968fdfe4e5e" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e082b965-bb88-4192-bce6-0eb8b0bf8e68" alt="" class="img-prof"/>
+                                    </div>
+                                </div>
+                                <button class="btn">Join</button></div>
+                                <div class="hiking-date date"><div class="day">
+                                    <h1>18</h1>
+                                    <p>sat</p>
+                                </div>
+                                <div class="activity">
+                                    <h2>Hiking</h2>
+                                    <div class="participants">
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/c61daa1c-5881-43f8-a50f-62be3d235daf" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/90affa88-8da0-40c8-abe7-f77ea355a9de" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/07d4fa6f-6559-4874-b912-3968fdfe4e5e" alt="" class="img-prof"/>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e082b965-bb88-4192-bce6-0eb8b0bf8e68" alt="" class="img-prof"/>
+                                    </div>
+                                </div>
+                                <button class="btn">Join</button></div>
+                            </div>
+                        </div>
+                        <div class="personal-bests">
+                            <h2>Personal Bests</h2>
+                            <div class="personal-info">
+                                <div class="fast info-items">
+                                    <p>Fastest 5K Run: 22min</p>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/242bbd8c-aaf8-4aee-a3e4-e0df62d1ab27" alt="">
+                                  </div>
+                                <div class="longest info-items">
+                                    <p>Longest Distance Cycling: 4 miles</p>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/a3b3cb3a-5127-498b-91cc-a1d39499164a" alt="">
+                                  </div>
+                                <div class="roller info-items">                  
+                                    <p>Longest Roller-Skating: 2 hours</p>
+                                    <img src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/e0ee8ffb-faa8-462a-b44d-0a18c1d9604c" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="profile"></div>
             </div>
