need to fix the navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lalezar&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <main>
@@ -16,29 +17,37 @@
                 <li>
                     <b></b>
                     <b></b>
-                    <a href="">
-                        <i></i>
+                    <a href="#">
+                        <i class="icon home-icon"></i>
                     </a>
                 </li>
                 <li>
                     <b></b>
                     <b></b>
-                    <a href=""></a>
+                    <a href="#">
+                        <i class="icon prof-icon"></i>
+                    </a>
                 </li>
                 <li>
                     <b></b>
                     <b></b>
-                    <a href=""></a>
+                    <a href="#">
+                        <i class="icon calendar-icon"></i>
+                    </a>
                 </li>
                 <li>
                     <b></b>
                     <b></b>
-                    <a href=""></a>
+                    <a href="#">
+                        <i class="icon run-icon"></i>
+                    </a>
                 </li>
                 <li>
                     <b></b>
                     <b></b>
-                    <a href=""></a>
+                    <a href="#">
+                        <i class="icon settings-icon"></i>
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -158,7 +167,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="profile"></div>
+                <div class="profile">
+                    <div class="my-prof">
+                        <div class="name">
+                            <i class="icon-prof bell-icon"></i>
+                            <i class="icon-prof msg-icon"></i>
+                            <h4>Kellsy Miller</h4>
+                        </div>
+                        <div class="active-cal">hello</div>
+                    </div>
+                    <div class="others-prof">hi</div>
+                </div>
             </div>
         </section>
     </main>
